# QEU4AchivementManager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  run_clang_format.py  run_format_qml.sh
qml/: main.qml
src/: achievement.hpp  achievementhtmlparser.cpp  achievementhtmlparser.hpp  achievementmodel.cpp  achievementmodel.hpp  achievementstatus.hpp  achivement.hpp  achivementhtmlparser.cpp  achivementhtmlparser.hpp  datafolders.cpp  datafolders.hpp  datamanager.cpp  datamanager.hpp  filedownloader.cpp  filedownloader.hpp  icurrentprofilestatus.hpp  main.cpp  profile.hpp  profilemanager.cpp  profilemanager.hpp  result.hpp  result_utilities.hpp  utils.hpp
